--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,15 @@
+body {
+  display: block;
+  background: #f9f7fe;
+  margin: 0 auto;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+  font-weight: 400px;
+  line-height: 1.5;
+  color: #212529;
+  box-sizing: border-box;
+}
 h1 {
   text-align: center;
   color: blue;
