--- a/src/styles.css
+++ b/src/styles.css
@@ -1,32 +1,33 @@
 body {
-  display: block;
-  background: #f9f7fe;
-  margin: 0 auto;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 1rem;
-  font-weight: 400px;
-  line-height: 1.5;
-  color: #212529;
-  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+
 h1 {
-  text-align: center;
-  color: blue;
+  color: #878787;
+  font-size: 24px;
+  font-weight: 100;
+  height: 100;
+  line-height: 28px;
+  margin-bottom: 0;
 }
 
-.logo {
-  display: block;
-  width: 200px;
-  margin: 0 auto;
-}
-h2 {
-  text-align: center;
-  color: blueviolet;
+ul {
+  margin: 0;
+  padding: 0;
 }
 
-.hosting {
-  display: block;
-  width: 600px;
-  margin: 0 auto;
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: rgb(135, 135, 135);
+  font-size: 16px;
+  font-weight: 100;
 }
