--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,10 @@ li {
   color: rgb(135, 135, 135);
   font-size: 16px;
   font-weight: 100;
+  line-height: 19px;
+}
+li::first-letter {
+  text-transform: capitalize;
 }
 footer {
   max-width: 600px;
